--- a/src/reset.css
+++ b/src/reset.css
@@ -59,13 +59,13 @@ textarea {
   resize: vertical;
 }
 
-button {
+/* button {
   font-size: 16px;
   padding: 0.3em 0.8em;
   border-radius: 4px;
   border: 1px solid #777;
   cursor: pointer;
-}
+} */
 
 /* utility classes */
 
