--- a/src/components/gainMoreSection/style.module.css
+++ b/src/components/gainMoreSection/style.module.css
@@ -2,3 +2,9 @@
   padding-top: 90px;
   padding-bottom: 122px;
 }
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
